# tool

./: .gitignore  __init__.py  build_record.py  config.py  count-fingers.py  predict_img.py  predict_video.py  predict_video_mp.py  predict_video_thread.py  proprocess_img.py  test1.py  test_HSV.py  test_boost  test_boost.cpp  test_ellipse.py  test_moment.ipynb  test_read_img.py  testycrcb.py  tfannotation.py  wrapper_for_predict_nail.py
finger/: YCbCr_v2.py  c_func.c  c_func.pyx  find_finger.py  test_vibep.py  video_vibe.py
finger/tmp/: ViBe_class.py  Vibe.py  c_vibep.i  c_vibep.py  c_vibep_wrap.cxx  setup.py  vibe.py
finger/vibeplus/c/: CMakeCache.txt  CMakeLists.txt  Makefile  ViBePlus.cpp  VisionTest.cbp  cmake_install.cmake  find_finger.cpp  main.cpp  skin.cpp  success_commend.txt  test_main.cpp  vision_test
