cmake_minimum_required(VERSION 3.6)
project(VisionTest)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 11)
#set(HEADER_FILES ViBePlus.h ViBePlusMacro.h)
set(SOURCE_FILES main.cpp ViBePlus.cpp ViBePlus.h ViBePlusMacro.h)
set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "include folder: " ${INCLUDE_DIR})
include_directories ("${PROJECT_BINARY_DIR}")
add_executable(vision_test ${SOURCE_FILES})
target_link_libraries(vision_test ${OpenCV_LIBS})
